--- a/Quaranteen Project/Base.lproj/Main.storyboard
+++ b/Quaranteen Project/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ICD-fZ-iPX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8xc-rI-dZh">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -660,6 +660,7 @@
                                 </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="clickNext:" destination="7v3-5M-HOB" eventType="touchUpInside" id="q69-yk-MKk"/>
+                                    <segue destination="lxq-n4-NNJ" kind="presentation" modalPresentationStyle="fullScreen" id="qzO-VM-jQU"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -695,6 +696,9 @@
                                 <rect key="frame" x="251" y="655" width="110" height="41"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button" image="done button"/>
+                                <connections>
+                                    <segue destination="ICD-fZ-iPX" kind="presentation" modalPresentationStyle="fullScreen" id="SDC-AI-tJE"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Watch your frog grow as you complete challenges!" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jbR-6L-HNi">
                                 <rect key="frame" x="53" y="540" width="270" height="55"/>
